@@ -1,5 +1,6 @@
 package com.palantir.jigsaw;
 
+import org.gradle.api.DefaultTask;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
 import org.gradle.api.artifacts.Dependency;
@@ -15,8 +16,6 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
 public class JigsawPatchPlugin implements Plugin<Project> {
 
@@ -25,58 +24,64 @@ public class JigsawPatchPlugin implements Plugin<Project> {
         NeedsPatchingExtension extension = project.getExtensions().create("needsPatching", NeedsPatchingExtension.class);
 
         project.getConfigurations().create("needsPatching");
-        Copy unpack = project.getTasks().create("unpack", Copy.class);
-        Exec jdeps = project.getTasks().create("jdeps", Exec.class);
-        Copy merge = project.getTasks().create("merge", Copy.class);
-        Exec compileModuleInfo = project.getTasks().create("compileModuleInfo", Exec.class);
-        Copy copyJarForPatching = project.getTasks().create("copyJarForPatching", Copy.class);
-        Exec patchJar  = project.getTasks().create("patchJar", Exec.class);
+        DefaultTask patchJars = project.getTasks().create("patchJars", DefaultTask.class);
 
         project.afterEvaluate(p -> {
             extension.getModules().stream().forEach(entry -> {
                 File jarFile = JigsawPatchPlugin.getJarPath(
                         project, "needsPatching", Objects.toString(entry));
+                System.out.println("patching " + jarFile.toString());
+
+                // hack hack use guava
                 String jarName = jarFile.getName().replace(".jar", "");
+                String[] nameSegs= jarName.split("-");
+                String jarUpperCamelCase = nameSegs[0].substring(0, 1).toUpperCase() + nameSegs[0].substring(1)
+                        + nameSegs[1].substring(0, 1).toUpperCase() + nameSegs[1].substring(1);
+
+                Copy unpack = project.getTasks().create("unpack" + jarUpperCamelCase, Copy.class);
+                Exec jdeps = project.getTasks().create("jdeps" + jarUpperCamelCase, Exec.class);
+                Copy merge = project.getTasks().create("merge" + jarUpperCamelCase, Copy.class);
+
+                CompileModuleInfoTask compileModuleInfo = project.getTasks().create(
+                        "compile" + jarUpperCamelCase, CompileModuleInfoTask.class);
+                Copy copyJarForPatching = project.getTasks().create("copy" + jarUpperCamelCase, Copy.class);
+                Exec patchJar  = project.getTasks().create("patch" + jarUpperCamelCase, Exec.class);
                 unpack.from(project.zipTree(jarFile));
                 unpack.into(new File(String.format("%s/unpack/%s", project.getBuildDir(), jarName)));
 
                 File input = new File(String.format("%s/unpack/%s/module-info.java",
                         project.getBuildDir(), jarName));
-                File manifestFile = new File(String.format("%s/unpack/%s/META-INF/MANIFEST.MF",
-                        project.getBuildDir(), jarName));
                 File outputDir = new File(String.format("%s/compileModuleInfo/%s",
                         project.getBuildDir(), jarName));
 
+                unpack.doLast(task -> {
+                    File manifestFile = new File(String.format("%s/META-INF/MANIFEST.MF",
+                            unpack.getDestinationDir()));
+                    System.out.println("unpacking " + unpack.getDestinationDir().toString() + " done");
+                    Manifest manifest = new DefaultManifest(manifestFile, new IdentityFileResolver());
+                    compileModuleInfo.setModule(() -> (String) manifest.getAttributes().get("Automatic-Module-Name"));
+                });
 
                 // compileModuleInfo tasks
                 compileModuleInfo.dependsOn(merge);
-                Manifest manifest = new DefaultManifest(manifestFile, new IdentityFileResolver());
-                Object module = manifest.getAttributes().get("Automatic-Module-Name");
-                Logger.getGlobal().log(Level.INFO, module.toString());
-
-                List<String> commands = new ArrayList<>();
-                commands.add("javac");
-                commands.add("-d");
-                commands.add(outputDir.toString());
-                commands.add("--module-path");
-                commands.add("../jackson-core/build/patchJar/jackson-core-2.9.5.jar:../jackson-annotations/build/patchJar/jackson-annotations-2.9.5.jar");
-                commands.add("--add-modules");
-                commands.add((String) module);
-                commands.add("--patch-module");
-                commands.add(String.format("%s=%s/unpack/%s", module, project.getBuildDir(),jarName));
-                commands.add(input.toString());
-
-                compileModuleInfo.setCommandLine(commands);
+                compileModuleInfo.setJarName(() -> jarName);
+                compileModuleInfo.setOutputDir(outputDir);
                 compileModuleInfo.getOutputs().dir(outputDir);
+                compileModuleInfo.setModuleInfo(input);
 
                 // jdeps
                 File jdepsOutputDir = new File(String.format("%s/jdeps/%s", project.getBuildDir(), jarName));
                 List<String> jdepsCommands = new ArrayList<>();
                 jdepsCommands.add("jdeps");
-                jdepsCommands.add("--module-path");
-                jdepsCommands.add("../jackson-core/build/patchJar/jackson-core-2.9.5.jar:../jackson-annotations/build/patchJar/jackson-annotations-2.9.5.jar");
+                File modulePath = new File(project.getBuildDir().getAbsolutePath(), "patchJar");
+                String files = project.fileTree(new File(project.getBuildDir().getAbsolutePath(), "patchJar")).getAsPath();
+                System.out.println(files);
+                if (modulePath.exists()) {
+                    jdepsCommands.add("--module-path");
+                    jdepsCommands.add(files);
+                }
                 jdepsCommands.add("--generate-module-info");
-                jdepsCommands.add(outputDir.toString());
+                jdepsCommands.add(jdepsOutputDir.toString());
                 jdepsCommands.add(jarFile.getAbsolutePath());
                 jdeps.setCommandLine(jdepsCommands);
                 jdeps.getOutputs().dir(jdepsOutputDir);
@@ -93,9 +98,11 @@ public class JigsawPatchPlugin implements Plugin<Project> {
 
                 patchJar.dependsOn(copyJarForPatching);
                 patchJar.dependsOn(compileModuleInfo);
+
                 File jarToPatch = new File(String.format("%s/patchJar/%s.jar", project.getBuildDir(), jarName));
                 File classFile = new File(String.format("%s/compileModuleInfo/%s/module-info.class", project.getBuildDir(), jarName));
                 File changeDir = new File(String.format("%s/compileModuleInfo/%s", project.getBuildDir(), jarName));
+
                 List<String> patchJarCommands = new ArrayList<>();
                 patchJarCommands.add("jar");
                 patchJarCommands.add("uf");
@@ -106,6 +113,7 @@ public class JigsawPatchPlugin implements Plugin<Project> {
                 patchJar.setCommandLine(patchJarCommands);
                 patchJar.getOutputs().file(jarToPatch);
 
+                patchJars.dependsOn(patchJar);
             });
         });
     }
